--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wicked-sales-js",
+  "name": "wicked-sales-js-solution",
   "version": "1.0.0",
-  "description": "A full stack Node.js and React shopping cart app.",
-  "main": "index.js",
+  "description": "Reference implemenation of a Node.js &amp; React shopping cart app.",
+  "main": "server/index.js",
   "scripts": {
     "dev": "npm-run-all --silent --parallel dev:*",
     "dev:client": "webpack-dev-server",
@@ -10,47 +10,108 @@
     "db:import": "source .env; psql $DATABASE_URL < database/dump.sql",
     "db:export": "source .env; pg_dump -c -O $DATABASE_URL > database/dump.sql",
     "build": "webpack --mode=production",
-    "start": "NODE_ENV=production node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node server/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TracyLuu/wicked-sales-js.git"
+  "nodemonConfig": {
+    "watch": [
+      "server/"
+    ],
+    "ignore": [
+      "server/public/",
+      "server/sessions/"
+    ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TracyLuu/wicked-sales-js/issues"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
-  "homepage": "https://github.com/TracyLuu/wicked-sales-js#readme",
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "eslintIgnore": [
+    "server/public/main.js"
+  ],
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "parser": "babel-eslint",
+    "extends": [
+      "plugin:react/recommended",
+      "eslint:recommended",
+      "standard"
+    ],
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "rules": {
+      "semi": [
+        "error",
+        "always"
+      ],
+      "padded-blocks": 0,
+      "arrow-parens": [
+        "error",
+        "as-needed"
+      ],
+      "curly": [
+        "error",
+        "multi-line"
+      ],
+      "no-console": [
+        "error",
+        {
+          "allow": [
+            "warn",
+            "error"
+          ]
+        }
+      ],
+      "space-before-function-paren": [
+        "error",
+        {
+          "anonymous": "always",
+          "named": "never",
+          "asyncArrow": "always"
+        }
+      ],
+      "react/prop-types": 0
+    }
+  },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "pg": "^7.18.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "session-file-store": "^1.4.0"
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "express-session": "1.17.0",
+    "pg": "7.17.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "session-file-store": "1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-transform-react-jsx": "^7.8.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.0.8",
-    "nodemon": "^2.0.2",
+    "@babel/core": "7.8.0",
+    "@babel/plugin-transform-react-jsx": "7.8.0",
+    "babel-eslint": "10.0.3",
+    "babel-loader": "8.0.6",
+    "eslint": "6.8.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-node": "11.0.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-standard": "4.0.1",
+    "husky": "4.0.7",
+    "lint-staged": "9.5.0",
+    "nodemon": "2.0.2",
     "npm-run-all": "4.1.5",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.10.1"
   }
 }
